# set-solver

./: .gitignore  README.md  set.cabal
exec/: Main.hs
spec/: DocTest.hs  HLint.hs  SetSpec.hs
src/: Set.hs
